examples/test/testpolicy15976.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15976
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key30: value27
      key27: value46
      key19: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value48
          key40: value21
          key14: value17
      podSelector:
        matchLabels:
          key42: value21
          key46: value8
